; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_asn_mime.c_b64_read_asn1.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_asn_mime.c_b64_read_asn1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASN1_F_B64_READ_ASN1 = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@ASN1_R_DECODE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @b64_read_asn1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @b64_read_asn1(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = call i32 (...) @BIO_f_base64()
  %9 = call i32* @BIO_new(i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @ASN1_F_B64_READ_ASN1, align 4
  %13 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %14 = call i32 @ASN1err(i32 %12, i32 %13)
  store i32* null, i32** %3, align 8
  br label %36

15:                                               ; preds = %2
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32* @BIO_push(i32* %16, i32* %17)
  store i32* %18, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32* @ASN1_item_d2i_bio(i32* %19, i32* %20, i32* null)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %15
  %25 = load i32, i32* @ASN1_F_B64_READ_ASN1, align 4
  %26 = load i32, i32* @ASN1_R_DECODE_ERROR, align 4
  %27 = call i32 @ASN1err(i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %15
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @BIO_flush(i32* %29)
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @BIO_pop(i32* %31)
  %33 = load i32*, i32** %6, align 8
  %34 = call i32 @BIO_free(i32* %33)
  %35 = load i32*, i32** %7, align 8
  store i32* %35, i32** %3, align 8
  br label %36

36:                                               ; preds = %28, %11
  %37 = load i32*, i32** %3, align 8
  ret i32* %37
}

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_f_base64(...) #1

declare dso_local i32 @ASN1err(i32, i32) #1

declare dso_local i32* @BIO_push(i32*, i32*) #1

declare dso_local i32* @ASN1_item_d2i_bio(i32*, i32*, i32*) #1

declare dso_local i32 @BIO_flush(i32*) #1

declare dso_local i32 @BIO_pop(i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
